# ripperx

./: BUGS  CHANGES  FAQ  INSTALL  Makefile.am  Makefile.in  README  README.plugin  README.plugin_spec_v0.1  README.plugin_tester  TODO  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.in  mkinstalldirs  ripperX.1  ripperX.pc.in  ripperX.spec  watch
c++/: config_rw.cc
config/: Makefile.in
debian/: README.Debian  changelog  control  copyright  dirs  docs  links  menu  ripperX.sgml  rules
m4/: ChangeLog
plugins/: Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.in  ripperX_plugin-8hz-mp3.c  ripperX_plugin-bladeenc.c  ripperX_plugin-cdparanoia.c  ripperX_plugin-encode.c  ripperX_plugin-flac.c  ripperX_plugin-gogo.c  ripperX_plugin-l3enc.c  ripperX_plugin-lame.c  ripperX_plugin-mp3enc.c  ripperX_plugin-musepack.c  ripperX_plugin-oggenc.c  ripperX_plugin-toolame.c  ripperX_plugin-xingmp3enc.c  ripperX_plugin_tester.c
po/: ChangeLog  LINGUAS  Makefile.in.in  de.po  en_GB.gmo  en_GB.po  es.po  gl.po  it.po  ripperX.pot  ripperx.pot
src/: Makefile.am  Makefile.in  aclocal.m4  cddb.c  cddb.h  cddbp.c  cddbp.h  common.h  config.h  config.h.in  config_rw.c  config_rw.h  config_window_handler.c  config_window_handler.h  configure  configure.in  dir_window_handler.c  dir_window_handler.h  err_dialog_handler.c  err_dialog_handler.h  id3.c  id3.h  id3lib.c  id3lib.h  interface_common.h  job_control.c  job_control.h  main.c  main.h  main_window_handler.c  main_window_handler.h  misc_utils.c  misc_utils.h  players_manipulation.c  players_manipulation.h  ripper_encoder_manipulation.c  ripper_encoder_manipulation.h  select_frame_handler.c  select_frame_handler.h  status_frame_handler.c  (+2 more)
src/xpms/: cddb.xpm  doall.xpm  go.xpm  ripperX-icon.xpm  ripperX.xpm  ripperX_box.xpm  s_button_checked.xpm  s_button_unchecked.xpm  s_play_button_disabled.xpm  s_play_button_enabled.xpm  scan.xpm
