AUTOMAKE_OPTIONS = dist-bzip2

SUBDIRS = po src config plugins

man_MANS = \
     ripperX.1

EXTRA_DIST = \
	BUGS \
	CHANGES \
	FAQ \
	README.plugin \
	README.plugin_spec_v0.1 \
	README.plugin_tester \
	autogen.sh \
	ripperX.desktop \
	ripperX.pc.in \
	$(man_MANS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = ripperX.pc
