dnl Process this file with autoconf to produce a configure script.
AC_INIT(CHANGES)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_CONFIG_SUBDIRS(src plugins)

AC_OUTPUT(Makefile)
