bin_PROGRAMS = \
	ripperX_plugin-8hz-mp3 \
	ripperX_plugin-bladeenc \
	ripperX_plugin-cdparanoia \
	ripperX_plugin-encode \
	ripperX_plugin-flac \
	ripperX_plugin-gogo \
	ripperX_plugin-l3enc \
	ripperX_plugin-lame \
	ripperX_plugin-mp3enc \
	ripperX_plugin-musepack \
	ripperX_plugin-oggenc \
	ripperX_plugin-toolame \
	ripperX_plugin-xingmp3enc \
	ripperX_plugin_tester

